Trabajo -Felipphe Triviño'- Día 29-08-2013 (EJB)

--- a/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
+++ b/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
@@ -51,6 +51,6 @@
         <param-value>true</param-value>
     </context-param>
     <welcome-file-list>
-        <welcome-file>NominaF.xhtml</welcome-file>
+        <welcome-file>EmpleadoIndividual.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
