Trabajo Victor Algarín 17/09/2013

--- a/DesignerRHN/DesignerRHN-war/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-war/nbproject/project.properties
@@ -52,7 +52,6 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.DesignerRHN-ejb.dist}:\
     ${file.reference.commons-fileupload-1.3.jar}:\
     ${file.reference.commons-io-2.4-src.zip}:\
     ${file.reference.commons-io-2.4.jar}:\
@@ -63,7 +62,8 @@ javac.classpath=\
     ${file.reference.iText-2.1.7.jar}:\
     ${file.reference.primefaces-3.5.jar}:\
     ${file.reference.primefaces-extensions-0.7.1.jar}:\
-    ${file.reference.commons-lang3-3.1.jar}
+    ${file.reference.commons-lang3-3.1.jar}:\
+    ${reference.DesignerRHN-ejb.dist}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
