--- a/DesignerRHN/DesignerRHN-war/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-war/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.all-themes-1.0.10.jar=..\\Librerias\\all-themes-1.0.10.jar
 file.reference.commons-fileupload-1.3.jar=..\\Librerias\\commons-fileupload-1.3.jar
 file.reference.commons-io-2.4-src.zip=..\\Librerias\\commons-io-2.4-src.zip
 file.reference.commons-io-2.4.jar=..\\Librerias\\commons-io-2.4.jar
@@ -63,7 +64,8 @@ javac.classpath=\
     ${file.reference.primefaces-3.5.jar}:\
     ${file.reference.primefaces-extensions-0.7.1.jar}:\
     ${file.reference.commons-lang3-3.1.jar}:\
-    ${reference.DesignerRHN-ejb.dist}
+    ${reference.DesignerRHN-ejb.dist}:\
+    ${file.reference.all-themes-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
