--- a/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
+++ b/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
@@ -51,10 +51,10 @@
         <param-value>true</param-value>
     </context-param>
     <welcome-file-list>
-        <welcome-file>VigenciasProyectos.xhtml</welcome-file>
+        <welcome-file>Barra.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
         <location>/PaginaNoEncontrada.xhtml</location>
-    </error-page>
+    </error-page>    
 </web-app>
