Trabajo Víctor Algarín 02-12-2013

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
@@ -94,4 +94,24 @@ porcentaje=Porcentaje
 tiposausentismo=Tipos Ausentismo
 descripcion=Descripcion
 #Exportar
-reportada=Reportada
+tipoE=Tipo
+claseE=Clase
+causaE=Causa
+diasE=Dias
+horasE=Horas
+iausenciaE=I_Ausencia
+fausenciaE=F_Ausencia
+expedicionE=Expedicion
+ipagoE=I_Pago
+fpagoE=F_Pago
+bliquidacionE=B_Liquidacion
+fliquidacionE=F_Liquidacion
+atE=AT
+epE=EP
+numeroE=No_Certificado
+cdiagnosticoE=C_Diagnostico
+prorrogaE=Prorroga
+periodoE=Periodo
+reportadaE=Reportada
+terceroE=Tercero
+observacionesE=Observaciones
