--- a/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
+++ b/DesignerRHN/DesignerRHN-war/web/WEB-INF/web.xml
@@ -51,7 +51,7 @@
         <param-value>true</param-value>
     </context-param>
     <welcome-file-list>
-        <welcome-file>perexperiencialaboral.xhtml</welcome-file>
+        <welcome-file>NominaF.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
         <error-code>404</error-code>
