--- a/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
@@ -42,6 +42,7 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=DesignerRHN-ejb.jar
+jars.in.ejbjar=false
 javac.classpath=\
     ${file.reference.commons-fileupload-1.3.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
