Trabajo Victor Algarín 12/12/2013

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
@@ -79,6 +79,8 @@ ingresarnuevo= Ingresar una nuevo Ausentismo
 modulo=MODULO DE SALUD OCUPACIONAL
 accident=Accidente
 enf=Enfermedad
+#DuplicarRegistro
+duplicarregistro= Duplicar Registro
 #RASTRO
 confirmarRastro=La tabla 'SOAUSENTISMOS' tiene rastros para el registro seleccionado, \u00bfdesea continuar?
 confirmarRastroHistorico=La tabla SOAUSENTISMOS tiene rastros historicos, \u00bfDesea continuar?
