--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
@@ -37,6 +37,8 @@ refrescar= Refrescar
 #NuevoRegistro
 nuevoregistro= Nuevo Registro
 ingresarnuevo= Agregar nueva ciudad
+#DuplicarRegistro
+duplicarregistro= Duplicar Ciudad
 #LovDepartamento
 departamentoN= Nombre Departamento
 #Validacion
