--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/cuenta.properties
@@ -93,6 +93,8 @@ consolidanitempresaN=Consolida N.I.T empresa:
 shortnameN=Short Name: 
 cuentasapN=Cuenta SAP: 
 subcuentaN=SubCuenta: 
+#DuplicarRegistro
+duplicarregistro= Duplicar Registro
 #Naturaleza items
 debito=DEBITO
 credito=CREDITO
