--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional.properties
@@ -61,6 +61,8 @@ caracterN=Caracter:
 numericoN=Numerico: 
 fechaN=Fecha: 
 observacionN=Observacion: 
+#DuplicarRegistro
+duplicarregistro= Duplicar Registro
 #Variables de tipo
 c=CARACTER
 f=FECHA
