--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadempleado.properties
@@ -37,6 +37,7 @@ todas=Todas las Novedades
 actuales= Novedades Actuales
 refrescar= Refrescar
 nuevoregistro= Nuevo Registro
+duplicarregistro= Duplicar Registro
 ingresarnueva= Ingresar una nueva Novedad
 limpiar=Limpiar
 agregar=Agregar
