--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -1,7 +1,7 @@
 #Titulo y Fieldsets
 titulo=Sistema de Recursos Humanos - Principal - Designer Software
 tipopersonal=Tipo Personal
-personalactivo=Personal Activo
+informacionpersonal=Informaci\u00f3n Personal
 informacionlaboral=Informaci\u00f3n Laboral
 #TABS
 personal=Personal
