HUGOSIN CAMBIOS PC ANDRES 23-12-2013 EJB

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
@@ -42,6 +42,7 @@ descripcionT=Descripcion del Tipo de Trabajador
 tipocotizanteT=Tipo Cotizante
 #LOV MOTIVO RETIRO
 motivoM=Motivo Retiro
+buscarM=Buscar Motivo Retiro
 codigoM=Codigo
 nombreM=Nombre
 #LOV CLASE PENSION
@@ -112,3 +113,6 @@ validacionNuevo=Para agregar una nueva Vigencia Tipo Trabajador es necesario adi
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+errorFechaVTT= La fecha de vigencia no puede ser vacia
+errorRegRetiro=El campo fecha retiro es vacio y/o la observacion posee mas de 500 caracteres
+errorRegPensionado=El campo fecha inicial es vacio y/o el campo Clase Pension es vacio
