--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -232,3 +232,10 @@ empleadosE=Empleados
 #Buscar y mostrar
 Buscar=Buscar Empleado...
 mostrar=Mostrar Todos
+toolTipNovedades1=Reporte todos los pagos y descuentos
+toolTipNovedades2=que no sean de liquidaci\u00f3n autom\u00e1tica.
+toolTipConcepto1=Propiedades de liquidaci\u00f3n y contabilizaci\u00f3n
+toolTipConcepto2=de cada concepto de n\u00f3mina. (Hoja de vida del concepto)
+toolTipFormulas=Administracion de operandos, operadores y formulas.
+toolTipLegislacion1=Propiedad de cada pa\u00eds, convenci\u00f3n colectiva
+toolTipLegislacion=o pacto colectivo de cada empresa.
