--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atausentismos.properties
@@ -117,3 +117,15 @@ periodoE=Periodo
 reportadaE=Reportada
 terceroE=Tercero
 observacionesE=Observaciones
+formaspago=Formas Pago
+fechainicial=Fecha Inicial
+valor=Valor
+fecha=Fecha
+expediente=Expediente
+ibcs=IBCS
+causasausentismo=Causas Ausentismo
+clasesausentismo=Clases Ausentismo
+fechafinal=Fecha Final
+fechanotificacion=Fecha Notificacion
+diagnosticos=Diagnosticos
+hora=Hora
