--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/barra.properties
@@ -1,6 +1,7 @@
 #Arriba
 titulo=Generar Liquidaci\u00f3n
 progreso=Progreso de Liquidaci\u00f3n
+indicadores=Indicadores
 ttal=Total trabajadores a liquidar: 
 ttl=Total trabajadores liquidados: 
 hil=Hora inicial liquidaci\u00f3n:
@@ -56,3 +57,4 @@ liquidacionesPrenomina=Liquidaciones Prenomina
 codigoempresaE=Codigo_Empresa
 codigoempresa=Codigo Empresa
 observacionE=Observacion
+sinregistro=Sin Registros
