--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ciudades.properties
@@ -31,12 +31,16 @@ cancelar=Cancelar
 atencion=ATENCI\u00d3N...!
 aceptar=Aceptar
 atras=Atras
-validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
+validacionNuevo=Para agregar una nueva ciudad es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 refrescar= Refrescar
 #NuevoRegistro
 nuevoregistro= Nuevo Registro
 ingresarnuevo= Agregar nueva ciudad
+codigoN=Codigo: 
+nombreN=Nombre de la Ciudad: 
+departamentooN=Departamento: 
+codigoalternativoN=Codigo Alternativo: 
 #DuplicarRegistro
 duplicarregistro= Duplicar Ciudad
 #LovDepartamento
@@ -55,3 +59,4 @@ errorObjetosDB=La tabla 'CIUDADES' no se encuentra en ObjetosDB. Porfavor comuni
 #Exportar
 codigoAlternativo=Codigo_Alternativo
 noombre=Nombre
+departamentos=Departamentos
