--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -239,3 +239,6 @@ toolTipConcepto2=de cada concepto de n\u00f3mina. (Hoja de vida del concepto)
 toolTipFormulas=Administracion de operandos, operadores y formulas.
 toolTipLegislacion1=Propiedad de cada pa\u00eds, convenci\u00f3n colectiva
 toolTipLegislacion=o pacto colectivo de cada empresa.
+buscarTabla=Buscar tabla
+mostrarTodos=Mostrar Todos
+buscarT=Buscar tabla: 
