--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipocontrato.properties
@@ -95,3 +95,5 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'VIGENCIASTIPOSCONTRATOS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+fispX=Fecha Inicio Proceso Sustitucion
+fispXX=Fecha_Inicio_Proceso_Sustitucion
