--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/novedadplano.properties
@@ -121,3 +121,5 @@ validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+errores=ERRORES: 
+reversarcarguenovedades=Reversar Cargue Novedades
