Felipphe 30-12-2013  !Feliz Año Nuevo! =)

--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nominaf.properties
@@ -242,3 +242,9 @@ toolTipLegislacion=o pacto colectivo de cada empresa.
 buscarTabla=Buscar tabla
 mostrarTodos=Mostrar Todos
 buscarT=Buscar tabla: 
+codigoX=C\u00f3digo
+primerApellidoX=Primer Apellido
+primerApellidoXX=Primer_Apellido
+segundoApellidoX=Segundo Apellido
+segundoApellidoXX=Segundo_Apellido
+nombreX=Nombre
