--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/parametro.properties
@@ -18,6 +18,7 @@ pdf=Exportar a PDF
 fechadesde=Fecha Desde: 
 fechahasta=Fecha Hasta: 
 fechacorte=Fecha Corte: 
+estructura=Estructura: 
 codigocc=C\u00f3digo C.C.: 
 nombrecentrocosto=Nombre Centro Costo: 
 tipotrabajador=Tipo Trabajador: 
@@ -88,8 +89,8 @@ fechacorteXX=Fecha_Corte
 codigoX=Codigo
 primerapellidoX=Primer Apellido
 primerapellidoXX=Primer_Apellido
-segudnoapellidoX=Segundo Apellido
-segudnoapellidoXX=Segundo_Apellido
+segundoapellidoX=Segundo Apellido
+segundoapellidoXX=Segundo_Apellido
 nombreX=Nombre
 estadoX=Estado
 #Otros
@@ -107,3 +108,4 @@ validacionNuevo=Para agregar un nuevo ausentismo es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+ingresarvalorabuscar=Ingresar valor a buscar
