--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/legislacion.properties
@@ -80,3 +80,4 @@ validacionNuevo=Para agregar un nuevo contrato es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+detalle=Detalle de la formula asociada a la legislacion seleccionada
