--- a/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
+++ b/DesignerRHN/DesignerRHN-ejb/nbproject/project.properties
@@ -32,6 +32,7 @@ file.reference.commons-logging-1.1.3.jar=..\\Librerias\\Librerias_Reportes\\comm
 file.reference.groovy-all-2.1.7.jar=..\\Librerias\\Librerias_Reportes\\groovy-all-2.1.7.jar
 file.reference.itext-2.1.7.jar=..\\Librerias\\Librerias_Reportes\\itext-2.1.7.jar
 file.reference.jasperreports-5.5.0.jar=..\\Librerias\\Librerias_Reportes\\jasperreports-5.5.0.jar
+file.reference.jxl.jar=..\\Librerias\\jxl.jar
 file.reference.ojdbc6.jar=..\\Librerias\\ojdbc6.jar
 file.reference.poi-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-3.9-20121203.jar
 file.reference.poi-ooxml-3.9-20121203.jar=..\\Librerias\\poi-3.9\\poi-ooxml-3.9-20121203.jar
@@ -66,7 +67,8 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.3.jar}:\
     ${file.reference.groovy-all-2.1.7.jar}:\
     ${file.reference.itext-2.1.7.jar}:\
-    ${file.reference.jasperreports-5.5.0.jar}
+    ${file.reference.jasperreports-5.5.0.jar}:\
+    ${file.reference.jxl.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
