--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplinformacionadicional.properties
@@ -81,3 +81,5 @@ finalX=Fecha_Final
 inicialXX=Fecha Inicial
 finalXX=Fecha Final
 tipodatoX=Tipo_Dato
+errorRegNew=Los campos Fecha Inicial-Fecha Final-Tipo Dato son obligatorios.
+errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es mayor a la fecha inicial.
