--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/ibcautoliquid.properties
@@ -73,3 +73,5 @@ validacionNuevo=Para agregar un nuevo IBC es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+errorRegNew= Los campos Fecha Inicial-Valor son obligaorios.
+errorFechas=La fecha inicial es nula y/o la fecha final es menor que la fecha inicial.
