--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplmvrs.properties
@@ -119,3 +119,7 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'MVRS' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorRegNewMvr=Los campos Fecha Inicial-Motivo son obligatorios.
+errorFechas=La fecha inicial es nula y/o la fecha final es menor a la fecha inicial.
+errorRegNewOtro=Los campos Fecha Inicial-Fecha Final-Estado-Tipo Certificado son obligatorios.
+errorFechasOC=la fecha inicial es menor que la fecha final.
