--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaevento.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciaevento.properties
@@ -86,3 +86,5 @@ puntajeind=Puntaje Ind.
 pciNN=Puntaje Cualitativo Ind.
 puntajegrupalNN=Puntaje Grup.
 pcgNN=Puntaje Cualitativo Grup.
+errorRegNew=Los campos Fecha Inicial y Evento son obligatorios.
+errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es mayor a la fecha inicial.
