--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposalarial.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/gruposalarial.properties
@@ -72,3 +72,4 @@ validacionNuevo=Para agregar un nuevo grupo salarial es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+errorRegNew = Los campos Fecha Vigencia y Valor son obligatorios
