--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciajornada.properties
@@ -84,7 +84,7 @@ gdt=\u00bfDesea guardar los cambios realizados en Descanso Tomado en Tiempo?
 #Negacion Borrado VJ
 nbvj=Para eliminar el registro Jornada Del Trabajador es NECESARIO que las tablas Descanso Tomado en Tiempo y Descanso Tomado en Dinero esten vacias.
 #Negacion Nueva VJ
-nnvj=Es necesario ingresar la FECHA VIGENCIA para almacenar el nuevo registro.
+nnvj=Los campos Fecha Vigencia-Nombre Jornada son obligatorios.
 #EXPORTAR
 fechaXX=Fecha_Vigencia
 jornadaX=Jornada Trabajo
@@ -118,3 +118,4 @@ validacionNuevo=Para agregar una nueva jornada es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+errorFechas = La fecha de vigencia es menor a 01/01/1900.
