--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciareformalaboral.properties
@@ -1,4 +1,4 @@
-titulo=Hist\u00f3ricos reforma laborales
+titulo=Hist\u00f3ricos Reforma Laborales
 reformas=Reformas Laborales
 #Toolbar
 guardar=Guardar
@@ -60,3 +60,5 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'VIGENCIASREFORMASLABORALES' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorFechas=La fecha vigencia es menor a 01/01/1900.
+errorRegNew=Los campos Fecha Vigencia-Reforma Laboral son obligatorios.
