--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigencialocalizacion.properties
@@ -1,6 +1,6 @@
 #Titulo y Fieldset
-titulo=Hist\u00f3ricos de Localizaciones
-localizacion=Localizaci\u00f3n del Empleado
+titulo=Historicos de Localizaciones
+localizacion=Localizacion del Empleado
 pcc=Prorrateo por Centros de Costo
 pp=Prorrateo por Proyecto
 archivo=Archivo Plano Prorrateos
@@ -12,14 +12,14 @@ filtrar=Activar Filtrado
 xls=Exportar a XLS
 xml=Exportar a XML
 pdf=Exportar a PDF
-nuevo=Nueva Vigencia Localizaci\u00f3n
-eliminar=Borrar Vigencia Localizaci\u00f3n
-duplicar=Duplicar Vigencia Localizaci\u00f3n
+nuevo=Nueva Vigencia Localizacion
+eliminar=Borrar Vigencia Localizacion
+duplicar=Duplicar Vigencia Localizacion
 rastro=Rastro
 #Tabla de Arriba
 fecha=Fecha
 centrocostos=Centro Costos
-loocalizacion=Localizaci\u00f3n
+loocalizacion=Localizacion
 motivo=Motivo
 proyecto=Proyecto
 #Prorrateo por centro de costo
@@ -30,7 +30,7 @@ final=Fecha Final
 subporcentaje=SubPorcentaje
 #LOV LOCALIZACION
 localizacionL=Localizacion
-buscarL=Buscar Localizaci\u00f3n: 
+buscarL=Buscar Localizacion: 
 centroL=Centro Costo
 nombreL=Nombre
 #LOV MOTIVO
@@ -45,10 +45,10 @@ codigoP=Codigo Proyecto
 nombreP=Nombre Proyecto
 empresaP=Empresa
 #LOV Localizacion Prorrateo
-localizacionLP=Localizaci\u00f3n Prorrateo
-buscarLP=Buscar Localizaci\u00f3n: 
+localizacionLP=Localizacion Prorrateo
+buscarLP=Buscar Localizacion: 
 codigoLP=Codigo
-localLP=Localizaci\u00f3n
+localLP=Localizacion
 empresaLP=Empresa
 #Verificar Rastros Tablas
 rastros=Rastros para tablas Historicos Localizaciones
@@ -74,7 +74,7 @@ proyectoVL=Proyecto:
 duplicarregistroVL=Duplicar Registro
 #Nuevo registro VP
 nuevoregistroVP=Nuevo Registro Prorrateo de Centro Costos
-ingresarnuevoVP=Ingresar nueva informaci\u00f3n para prorrateo centros costos
+ingresarnuevoVP=Ingresar nueva informacion para prorrateo centros costos
 centrocostoVP=Centro Costo: 
 porcentajeVP=Porcentaje: 
 inicialVP=Fecha Inicial: 
@@ -85,7 +85,7 @@ subporcentajeVP=Sub Porcentaje:
 duplicarregistroVP=Duplicado Registro Prorrateo de Centro Costos
 #Nuevo registro VPP
 nuevoregistroVPP=Nuevo registro Prorrateo de Proyecto
-ingresarnuevoVPP=Ingresar Nueva informaci\u00f3n para Prorrateo Proyecto
+ingresarnuevoVPP=Ingresar Nueva informacion para Prorrateo Proyecto
 proyectoVPP=Proyecto: 
 porcentajeVPP=Porcentaje: 
 inicialVPP=Fecha Inicial: 
@@ -109,11 +109,11 @@ proyectoEVPP=Proyecto
 fechainicialEVPP=Fecha Inicial Prorrateo Proyecto
 fechafinalEVPP=Fecha Final Prorrateo Proyecto
 #Dialogos de la p\u00e1gina
-guardarCambiosVigenciaProrrateo=\u00bfDesea guardar los cambios realizados en Prorrateo por Centro Costo?
-guardarCambiosVigenciaProrrateoProyecto=\u00bfDesea guardar los cambios realizados en Prorrateo por Proyecto?
+guardarCambiosVigenciaProrrateo=Desea guardar los cambios realizados en Prorrateo por Centro Costo?
+guardarCambiosVigenciaProrrateoProyecto=Desea guardar los cambios realizados en Prorrateo por Proyecto?
 negacionNuevoRegistroVPP=Para ingresar un registro Prorrateo por Proyectos es necesario que exista un dato o mas de Prorrateos por Centro Costo
 negacionBorradoVL=Para eliminar el registro Vigencia Localizacion es NECESARIO que las tablas Prorrateos por Centro Costos y Prorrateos por Proyectos esten vacias.
-negacionNuevaVL=Es necesario ingresar la FECHA VIGENCIA para almacenar la nueva vigencia.
+negacionNuevaVL=Los campos Fecha Vigencia-Motivo-Localizacion son olbigatorios.
 #EXPORTAR
 fechavigenciaX=Fecha Vigencia
 fechavigenciaXX=Fecha_Vigencia
@@ -133,24 +133,28 @@ fechafinalXX=Fecha_Final
 proyectoX=Proyecto
 subporcentajeX=SubPorcentaje
 #Otros
-vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
+vacio=No se encontraron resultados para la busqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
 si=Si
 no=No
 limpiar=Limpiar
 agregar=Agregar
 cancelar=Cancelar
-atencion=ATENCI\u00d3N...!
+atencion=ATENCION...!
 aceptar=Aceptar
 atras=Atras
 validacionNuevo=Para agregar una nueva localizacion es necesario adicionar:
-cambiosRealizados=\u00bfDesea guardar los cambios realizados?
-cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+cambiosRealizados=Desea guardar los cambios realizados?
+cambio=Hay cambios sin guardar, desea guardar los cambios?
 refrescar= Refrescar
 #RASTRO
 errorRastroHistorico=La tabla no tiene rastros historicos.
 errorRegistroRastro=El registro seleccionado no tiene rastros.
-errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
+errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, Desea continuar?
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+errorFecha=La fecha vigencia es menor a 01/01/1900.
+errorRegNewVP=Los campos Fecha Inicial-Porcentaje-Centro Costo son obligatorios.
+errorFechas=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
+errorRegNewVPP=Los campos Fecha Inicial-Proyecto-Porcentaje son obligatorios.
