--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportelaboral.properties
@@ -92,12 +92,12 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 #Tipos
-acrobat=Acrobat
-html=HTML
-xml=XML
-excel=EXCEL
-hojaelectronica=Hoja Electronica
-plano=Plano
+pdf=PDF
+xhtml=XHTML
+xls=XLS
+xlsx=XLSX
+csv=XSV
+txt=TXT
 #PERSONAL
 activo=ACTIVO
 pensionado=PENSIONADO
