--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
@@ -163,9 +163,9 @@ cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
 #Tipos
-acrobat=Acrobat
-html=HTML
-xml=XML
-excel=EXCEL
-hojaelectronica=Hoja Electronica
-rtf=RTF
+pdf=PDF
+xhtml=XHTML
+xls=XLS
+xlsx=XLSX
+csv=CSV
+docx=DOCX
