--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/atextrarecargo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/atextrarecargo.properties
@@ -8,6 +8,8 @@ tipodia=Tipo Dia
 tipojornada=Tipo Jornada
 tipolegislacionlaboral=Tipo Legislaci\u00f3n Laboral
 #Tabla Abajo
+hi=HI
+hf=HF
 concepto=Concepto
 empresa=Empresa
 diasemana=D\u00eda Semana
@@ -21,7 +23,7 @@ domingo=DOMINGO
 todos=TODOS
 adicional=Adicional Ini/Fin
 inicio=INICIO
-final=FINAL
+final=FIN
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -73,8 +75,8 @@ naturalezaC=Naturaleza
 empresaC=Empresa
 #Dialogos
 errorBorrarRegistro=Para eliminar el registro es necesario que los Detalles del registro esten vacios
-verificarNuevoRegistro=Seleccione la tabla para nuevo registro
 nuevoregistropagina=Nuevo Registro Pagina
+verificarNuevoRegistro=Seleccione la tabla para nuevo registro
 recargosextras=Recargos Extras
 detallesrecargosextras=Detalles Recargos Extras
 #Nuevo Registro Recargo Extra
@@ -146,9 +148,26 @@ conceptoX=Concepto
 empresaX=Empresa
 diasemanaX=Dia Semana
 diasemanaXX=Dia_Semana
-aX=A
-mX=M
-cX=C
 adicionalinifinX=Adicional Ini/fin
 adicionalinifinXX=Adicional_Ini_o_fin
-gX=G
+#Otros
+vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de busqueda.
+si=Si
+no=No
+limpiar=Limpiar
+agregar=Agregar
+cancelar=Cancelar
+atencion=ATENCI\u00d3N...!
+aceptar=Aceptar
+atras=Atras
+cambiosRealizados=\u00bfDesea guardar los cambios realizados?
+cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+refrescar= Refrescar
+#RASTRO
+errorRastroHistorico=La tabla no tiene rastros historicos.
+errorRegistroRastro=El registro seleccionado no tiene rastros.
+errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros asociados, \u00bfDesea continuar?
+errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
+seleccionarRegistro=Por favor seleccione un registro.
+errorObjetosDB=La tabla no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
