--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/condicionambientalpeligrosa.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/condicionambientalpeligrosa.properties
@@ -45,3 +45,18 @@ errorTablaConRastro=La tabla no existe en RASTROSTABLAS, pero tiene registros as
 errorTablaSinRastro=La tabla no existe en RASTROSTABLAS, y no tiene registros asociados.
 seleccionarRegistro=Por favor seleccione un registro.
 errorObjetosDB=La tabla 'SOCONDICIONESAMBIENTALESP' no se encuentra en ObjetosDB. Porfavor comunicarse con soporte.
+#Otros
+vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
+lovvacio=No se encontraron resultados con el criterio de busqueda.
+si=Si
+no=No
+limpiar=Limpiar
+agregar=Agregar
+cancelar=Cancelar
+atencion=ATENCI\u00d3N...!
+aceptar=Aceptar
+atras=Atras
+validacionNuevo=Para agregar un nuevo acto inseguro es necesario adicionar:
+cambiosRealizados=\u00bfDesea guardar los cambios realizados?
+cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
+refrescar= Refrescar
