--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvacapendiente.properties
@@ -72,3 +72,5 @@ duplicarregistroVP=Duplicar Registro Vacaciones Pendientes
 #Valores de Estado
 cerrado=CERRADO
 abierto=ABIERTO
+errorRegNew=Los campos Fecha Inicial-Fecha Final-Estado-Dias Pendientes son obligatorios.
+errorFechas=La fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a 01/01/1900.
