--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciatipotrabajador.properties
@@ -113,6 +113,7 @@ validacionNuevo=Para agregar una nueva Vigencia Tipo Trabajador es necesario adi
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
-errorFechaVTT= La fecha de vigencia no puede ser vacia
+errorFechaVTT=La fecha vigencia es menor a 01/01/1900.
 errorRegRetiro=El campo fecha retiro es vacio y/o la observacion posee mas de 500 caracteres
-errorRegPensionado=El campo fecha inicial es vacio y/o el campo Clase Pension es vacio
+errorRegPensionado=El campo fecha inicial es vacio y/o el campo Clase Pension es vacio.
+errorRegNewVTT=Los campos Fecha Vigencia-Tipo Trabajador son obligatorios.
