--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/emplvigenciasueldo.properties
@@ -102,7 +102,7 @@ editarFechaInicialVAD=Fecha Inicial Vigencia Afiliaciones
 editarFechaFinalVAD=Fecha Final Vigencia Afiliaciones
 #Dialogos Varios
 guardarCambiosVigenciasAfiliaciones=\u00bfDesea guardar los cambios realizados en Vigencias Afiliaciones?
-negacionNuevaS= Para ingresar el nuevo registro es NECESARIO que los campos Fecha Vigencia - Valor - Fecha Vigencia Retroactivo tengan un valor asignado.
+negacionNuevaS= Los campos Fecha Vigencia-Fecha Retroactivo-Motivo Cambio Sueldo-Tipo Sueldo-Valor son obligatorios.
 negacionBorradoVS=Para eliminar el registro Vigencia Salario es NECESARIO que la Vigencia Afilicion este vacia.
 #EXPORTAR
 fechavigenciaXX=Fecha_Vigencia
@@ -136,3 +136,6 @@ validacionNuevo=Para agregar un nuevo salario es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+errorFechasVS=La fecha vigencia es menor a 01/01/1900 y/o la vigencia del retroactivo es menor a 01/01/1900.
+errorFechasVA=la fecha inicial es menor a 01/01/1900 y/o la fecha final es menor a la fecha inicial.
+negacionNuevaVA=Los campos Fecha Inicial-Tercero-Tipo Entidad son obligatorios.
