--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportebienestar.properties
@@ -1,6 +1,7 @@
 #Titulo y Fieldsets
+titulo=Reportes Predefinidos - Bienestar
 parametros=Parametros
-reportes=Reportes Predefinidos - N\u00f3mina
+reportes=Reportes Predefinidos - Bienestar
 #Toolbar
 guardar=Guardar
 editar=Editar
@@ -86,3 +87,4 @@ xls=XLS
 xlsx=XLSX
 csv=CSV
 txt=TXT
+reportesR=Reportes
