--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportepersonal.properties
@@ -1,7 +1,7 @@
 #Titulo y Fieldsets
 titulo=Reportes Predefinidos - Datos Personales
 parametros=Parametros
-reportes=Reportes Prefedinidos - N\u00f3mina
+reportes=Reportes Predefinidos - Datos Personales
 #Botones
 mostrar=Mostrar Todos
 buscar=Buscar Reporte
@@ -169,3 +169,4 @@ xls=XLS
 xlsx=XLSX
 csv=CSV
 docx=DOCX
+reportesR=Reportes
