--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/reportesbancos.properties
@@ -1,6 +1,6 @@
 titulo=Generaci\u00f3n Archivos Planos
 parametros=Parametros
-reportes=Reportes Predefinidos - N\u00f3mina
+reportes=Bancos
 #Botones
 envio=Envio por Correo
 #TOOLBAR
