--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportenomina.properties
@@ -136,11 +136,11 @@ asociacionE=Asociaci\u00f3n Parametrizaci\u00f3n
 reporteAGenerar=Reporte a Generar
 requisitosReporte=Requisitos Reporte
 #Tipos
-acrobat=Acrobat
-html=HTML
-xml=XML
-excel=EXCEL
-hojaelectronica=Hoja Electronica
+pdf=PDF
+xhtml=XHTML
+xls=XLS
+xlsx=XLSX
+csv=CSV
 #Otros
 vacio=No se encontrar\u00f3n resultados para la b\u00fasqueda
 lovvacio=No se encontraron resultados con el criterio de busqueda.
@@ -156,3 +156,4 @@ validacionNuevo=Para agregar un nuevo reporte es necesario adicionar:
 cambiosRealizados=\u00bfDesea guardar los cambios realizados?
 cambio=A\u00fan hay cambios sin guardar, \u00bfdesea guardar los cambios?
 refrescar= Refrescar
+reportesR=Reportes
