--- a/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad.properties
+++ b/DesignerRHN/DesignerRHN-war/src/java/Recursos/nreportescontabilidad.properties
@@ -1,7 +1,7 @@
 #Titulo y Fieldsets
 titulo=Reportes de N\u00f3mina
 parametros=Parametros
-reportes=Reportes Predefinidos - N\u00f3mina
+reportes=Reportes
 #Botones
 envio=Envio por Correo
 #TABLA
@@ -84,3 +84,4 @@ xls=XLS
 xlsx=XLSX
 csv=CSV
 txt=TXT
+reportesR=Reportes
